# SatisfactoryCalc

./: .gitignore  CMakeLists.txt  README.md
SatisfactoryCalc/: CMakeLists.txt  Factory.cpp  Factory.h  Factory.hpp  Recipe.h  Resource.h  SatisfactoryCalc.cpp  YamlReader.cpp  YamlReader.h  YamlReader.hpp  alternative_recipes.yaml  constraints.yaml  default_recipes.yaml  desired.yaml
SatisfactoryCalcMain/: CMakeLists.txt  SatisfactoryCalcMain.cpp
SatisfactoryCalcTest/: pch.h  test.cpp
